test/libsolidity/syntaxTests/functionTypes/function_type_internal_public_variable.sol
contract C {
    function(bytes memory) internal public a;
}
// ----
// TypeError: (17-57): Internal or recursive type is not allowed for public state variables.
